--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <div id="result"></div>
 
   <script>
-  const liffId = "YOUR_LIFF_ID";
-  const gasUrl = "YOUR_GAS_URL";
+  const liffId = "2008140201-3BvRrDMk";
+  const gasUrl = "https://script.google.com/macros/s/AKfycbxY5Rruk-ErtJY_u0Rk3U2WOUlXtdwzdhzZPkYu70tuO9-_Q2Ex8mbVy3Afw1kgCt9GXw/exec";
 
   async function main() {
     try {
