--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       }
 
       // idTokenをGASに送る（verify用）
-      const url = `${gasUrl}?mode=stamp&idToken=${idToken}&shopId=${shopId}`;
+      const url = `${gasUrl}?mode=stamp&idToken=${encodeURIComponent(idToken)}&shopId=${shopId}`;
       try {
         const res = await fetch(url);
         const text = await res.text();
