--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="result"></div>
 
  <script>
-  const liffId = "2008140201-eAgo4R5Y"; 
+  const liffId = "2008140201-3BvRrDMk"; 
   const gasUrl = "https://script.google.com/macros/s/AKfycbyS-6p9bHMJyQCCmg6jx_w8bdPy6MkyGFdxGGASitGW9HhpyB7ogTXNdGeR2SiQvi9UUg/exec"; 
 
   async function main() {
